@@ -196,7 +196,7 @@ parse_next_cookie(struct cookie_jar *jar, struct strref *input,
     struct cookie *cookie;
     bool discard = false;
 
-    http_next_name_value(tpool, input, &name, &value);
+    http_next_name_value(tpool, input, &name, &value, false);
     if (strref_is_empty(&name))
         return false;
 
@@ -228,7 +228,7 @@ parse_next_cookie(struct cookie_jar *jar, struct strref *input,
     while (!strref_is_empty(input) && input->data[0] == ';') {
         strref_skip(input, 1);
 
-        http_next_name_value(tpool, input, &name, &value);
+        http_next_name_value(tpool, input, &name, &value, false);
         if (strref_lower_cmp_literal(&name, "domain") == 0) {
             const char *new_domain = strref_dup(tpool, &value);
             if (strcasecmp(new_domain, "local") != 0 &&
