@@ -48,6 +48,26 @@ http_next_quoted_string(pool_t pool, struct strref *input, struct strref *value)
     strref_skip(input, pos);
 }
 
+static __attr_always_inline bool
+char_is_rfc_ignorant(char ch)
+{
+    return char_is_http_token(ch) || ch == '[' || ch == ']';
+}
+
+static void
+http_next_rfc_ignorant_token(struct strref *input, struct strref *value)
+{
+    value->length = 0;
+    value->data = input->data;
+
+    while (value->length < input->length &&
+           char_is_rfc_ignorant(input->data[value->length]))
+        ++value->length;
+
+    if (value->length > 0)
+        strref_skip(input, value->length);
+}
+
 void
 http_next_value(pool_t pool, struct strref *input, struct strref *value)
 {
@@ -57,9 +77,20 @@ http_next_value(pool_t pool, struct strref *input, struct strref *value)
         http_next_token(input, value);
 }
 
+static void
+http_next_rfc_ignorant_value(pool_t pool, struct strref *input,
+                             struct strref *value)
+{
+    if (!strref_is_empty(input) && input->data[0] == '"')
+        http_next_quoted_string(pool, input, value);
+    else
+        http_next_rfc_ignorant_token(input, value);
+}
+
 void
 http_next_name_value(pool_t pool, struct strref *input,
-                     struct strref *name, struct strref *value)
+                     struct strref *name, struct strref *value,
+                     bool rfc_ignorant)
 {
     http_next_token(input, name);
     if (strref_is_empty(name))
@@ -69,7 +100,11 @@ http_next_name_value(pool_t pool, struct strref *input,
     if (!strref_is_empty(input) && input->data[0] == '=') {
         strref_skip(input, 1);
         strref_ltrim(input);
-        http_next_value(pool, input, value);
+
+        if (rfc_ignorant)
+            http_next_rfc_ignorant_value(pool, input, value);
+        else
+            http_next_value(pool, input, value);
     } else
         strref_clear(value);
 }
