@@ -73,7 +73,8 @@ http_next_value(pool_t pool, struct strref *input, struct strref *value);
 
 void
 http_next_name_value(pool_t pool, struct strref *input,
-                     struct strref *name, struct strref *value);
+                     struct strref *name, struct strref *value,
+                     bool rfc_ignorant);
 
 static inline bool
 http_must_quote_token(const struct strref *src)
