@@ -3,6 +3,8 @@ cm4all-beng-proxy (0.6.21) unstable; urgency=low
   * http-client: log more error messages
   * delegate-stock: added the DOCUMENT_ROOT environment variable
   * response, widget: accept "application/xhtml+xml"
+  * cookie-server: allow square brackets in unquoted cookie values
+    (violating RFC 2109 and RFC 2616)
 
  --
 
